package dataControllerUtils.protobuf;

//The parameter full identity

message DataId {
extensions 10 to 110;

  required string parameterName = 1;
  optional string oid = 2; // oid can't and isn't filled by GPCCHS.
  optional string sourceOid = 3;
  required string catalog = 4;
  optional string comObject = 5;
  required uint32 sessionId = 6; // should be uint16
  optional uint32 domainId = 7; // should be uint16
  optional string url = 8; //for fds parameters
  optional string version = 9; //for fds parameters
}
